trying to add ace

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<style type="text/css">
+	</style>
+ 
+	</head>
 	<body>
 
 		<div id="content">This is a __markdown__ toy that uses [marked](https://www.npmjs.com/package/marked) to view a file. 
 		<br/>To-do: incorporate the newer safer markdown module [markdown-it](https://www.npmjs.com/package/markdown-it).</div>
 
  		<script>
+		 	src="../node_modules/ace-builds/src-min/ace.js" charset="utf-8">
+
 		 	require('./kyles-custom-menu.js')
 	 		// stndard node modules
 			const path = require('path')
